Fix typo in chapter 4

--- a/cs-CZ/04-prvni-kroky-v-systemu.adoc
+++ b/cs-CZ/04-prvni-kroky-v-systemu.adoc
@@ -49,7 +49,7 @@ image::img/dash-a.png[width=300]
 .Integrované vyhledávání
 image::img/vyhledavani.png[width=400]
 
-4. _Virtuální plochy_ -- na levé straně můžeme najít náhledy virtuálních ploch, kterých lze mít více, aniž by bylo nutné mít více monitorů. Slouží k{nbsp}organizaci oken a aplikací. _GNOME_ nemá fixní počet ploch. Naopak, jejich počet je dynamický. Je jich vždycky tolik, na kolika z{nbsp}nich máte aktuálně umístěná okna, a jednu prázdnou navíc, která je připravená k{nbsp}použití. Když na ni přetáhnete okno, vytvoří se další prázdná a naopak. Přetahovat okna mezi plochami můžete přímo v{nbsp}náhledech, případně můžete přetáhnout náhled ze středu obrazovky do jednoho z{nbsp}náhledů. Přepínat mezi virtuálními plochami můžete také přímo v{nbsp}pracovním režimu pomocí klávesové zkratky kbd:[Ctrl]+kbd:[Alt]+kbd:[šipka ↑]/kbd:[šipka ↓].
+4. _Virtuální plochy_ -- na pravé straně můžeme najít náhledy virtuálních ploch, kterých lze mít více, aniž by bylo nutné mít více monitorů. Slouží k{nbsp}organizaci oken a aplikací. _GNOME_ nemá fixní počet ploch. Naopak, jejich počet je dynamický. Je jich vždycky tolik, na kolika z{nbsp}nich máte aktuálně umístěná okna, a jednu prázdnou navíc, která je připravená k{nbsp}použití. Když na ni přetáhnete okno, vytvoří se další prázdná a naopak. Přetahovat okna mezi plochami můžete přímo v{nbsp}náhledech, případně můžete přetáhnout náhled ze středu obrazovky do jednoho z{nbsp}náhledů. Přepínat mezi virtuálními plochami můžete také přímo v{nbsp}pracovním režimu pomocí klávesové zkratky kbd:[Ctrl]+kbd:[Alt]+kbd:[šipka ↑]/kbd:[šipka ↓].
 
 5. _Náhledy otevřených oken_ -- slouží k{nbsp}přehledu o{nbsp}tom, jaká okna máte otevřená, a také k{nbsp}přepínání mezi nimi. Přepnutí do vybraného okna provedete najetím myši na okno a kliknutím. Mezi okny můžete přepínat také klávesami. Stačí po přepnutí do _Činností_ stisknout klávesu kbd:[šipka ↓] a potom pomocí šipek navigovat mezi okny. Přepnutí do vybraného okna provedete klávesou kbd:[Enter].
 
